<resources>
    <string name="app_name">FlyYoung</string>
    <string name="app_login">FlyYoung登陆</string>
    <string name="login_telWaring">请输入电话号码</string>
    <string name="login_passwordWaring">请输入登陆密码</string>
    <string name="login_remembermeWaring">记住密码</string>
    <string name="http_requsetfailed">网络连接服务器失败</string>
    <string name="login_matchfailed">用户名或密码错误</string>

    <string name="login_rightNowlogin">马上登陆</string>
    <string name="menu_myBlob">我的点滴</string>
    <string name="menu_myArticle">我的文章</string>
    <string name="menu_myAlbum">我的相册</string>
    <string name="menu_myDownload">我的下载</string>
    <string name="menu_myMessage">我的留言</string>
    <string name="menu_myInfos">我的信息</string>

    <string name="menu_userimg">用户头像</string>

    <string name="blobs_toolBarTitle">我的点滴</string>
    <string name="articles_toolBarTitle">我的文章</string>
    <string name="albums_toolBarTile">我的相册</string>
    <string name="downloads_toolBarTitle">我的下载</string>
    <string name="messages_toolBarTitle">我的留言</string>

    <string name="addblob_sureButton">发布</string>
    <string name="addblob_ToolBar">添加点滴</string>
    <string name="addblob_ConentHint">你想说点什么..</string>

    <string name="addblob_weatherName">天气状况:</string>
    <string name="Addblob_WarnigNoContent">不要着急，先说点什么吧</string>
    <string name="Addblob_WarnigNoImage">哎哟，没有图片不行哦</string>
    <string name="Addblob_fromAlbum">相册</string>
    <string name="Addblob_fromCamera">相机</string>
    <string name="Addblob_makeSuccess">点滴发布成功了</string>
    <string name="Addblob_makeFailed">点滴发布失败了</string>

    <string name="AddPhoto_Toolbar">添加照片</string>

    <string name="PhotoSelect_Toolbar">选择照片</string>
    <string name="PhotoSelect_makeSure">选择照片</string>

    <string name="Album_Name">相册名称</string>
    <string name="Album_Description">相册描述</string>
    <string name="Album_ShowCustomer">展示</string>
    <string name="Album_Subject">选择主题</string>
    <string name="Album_AddButton">添加相册</string>
    <string name="Album_AlbumNameWaring">必须要输入相册名称才行哦</string>
    <string name="Album_succes">相册添加成功了</string>
    <string name="Album_failed">相册添加失败了</string>

    <string name="download_name">文件名称</string>
    <string name="download_version">文件版本</string>
    <string name="download_description">文件名称</string>
    <string name="download_path">选择文件</string>
    <string name="download_showCustomer">允许下载</string>
    <string name="download_makeSure">确定上传</string>
    <string name="download_Toolbar">上传文件</string>

    <string name="download_NameWarning">文件名称必须要填写哦</string>
    <string name="download_DescriptionWarning">文件功能必须要填写哦</string>
    <string name="download_FileWarning">必须要选择文件才行哦</string>

    <string name="download_MakeFileSuccess">文件上传成功</string>
    <string name="download_MakeFileFailed">文件上传失败</string>

    <string name="download_downloadButton">下载</string>
    <string name="download_downloadSucces">下载成功</string>

    <string name="article_catalog_toolbar">选择分类</string>

    <string name="article_add_title">文章标题</string>
    <string name="article_add_Description">文章概述</string>
    <string name="article_add_keywoeds">文章关键词</string>
    <string name="article_add_showCustomer">展示</string>
    <string name="article_add_showimage">图片</string>

    <string name="link_url">输入链接地址</string>
    <string name="link_name">输入链接名称</string>

    <string name="link_Sure">确定</string>
    <string name="link_Cancel">取消</string>

    <string name="Catalog_Name">分类名称</string>
    <string name="Catalog_Short">分类简称</string>
    <string name="Catalog_Toolbar">添加分类</string>

</resources>
