<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
android:id="@+id/addDownload_toolbar"
        ></android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/download_name"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/edit_text_padding"
        android:background="@drawable/edit_bg"
        android:id="@+id/addDownload_name"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/download_version"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/edit_text_padding"
        android:background="@drawable/edit_bg"
        android:id="@+id/addDownload_version"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/download_description"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/edit_text_padding"
        android:background="@drawable/edit_bg"
android:id="@+id/addDownload_description"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/download_path"
            android:id="@+id/addDownload_file"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
           android:layout_weight="1"
            android:id="@+id/addDownload_fileresult"
            android:paddingTop="@dimen/article_catalog_size"

            />
    </LinearLayout>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_showCustomer"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:checked="true"
        android:id="@+id/addDownload_showCustomer"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
android:text="@string/download_makeSure"
        android:id="@+id/addDownload_makesure"
        />
</LinearLayout>