<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
<android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary"
    android:id="@+id/login_toolbar"
    >

</android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/edit_text_padding"
        android:background="@drawable/edit_bg"
        android:hint="@string/login_telWaring"
        android:maxLines="1"

        android:id="@+id/login_tel_text"
        android:inputType="phone"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/edit_text_padding"
        android:hint="@string/login_passwordWaring"
        android:maxLines="1"
        android:background="@drawable/edit_bg"
        android:id="@+id/login_password_text"
        android:inputType="textPassword"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_remember"
        android:text="@string/login_remembermeWaring"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:checked="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_rightNowlogin"
        android:id="@+id/login_right_login"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />

</LinearLayout>
