<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:id="@+id/AddAlbum_Toolbar"
        >

    </android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Album_Name"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/edit_text_padding"
        android:background="@drawable/edit_bg"
        android:id="@+id/AddAlbum_AlbumName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Album_Description"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/edit_text_padding"
        android:background="@drawable/edit_bg"
        android:id="@+id/AddAlbum_Description"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        >

<Spinner
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"

    android:background="@drawable/edit_bg"
    android:padding="@dimen/edit_text_padding"
    android:id="@+id/AddAlbum_Spinner"
    ></Spinner>
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/Album_ShowCustomer"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:checked="true"
        android:id="@+id/AddAlbum_ShowCustomer"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Album_AddButton"
        android:id="@+id/AddAlbum_addButton"

        />


</LinearLayout>