<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:id="@+id/Catalog_Toolbar"
        ></android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/edit_text_padding"
        android:background="@drawable/edit_bg"
        android:hint="@string/Catalog_Name"
        android:maxLines="1"

        android:id="@+id/Article_catalog_Name"
        android:inputType="text"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/edit_text_padding"
        android:background="@drawable/edit_bg"
        android:hint="@string/Catalog_Short"
        android:maxLines="1"

        android:id="@+id/Article_catalog_Short"
        android:inputType="text"

        />

    <CheckBox
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="可用"
        android:id="@+id/Article_catalog_Flags"
        android:checked="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_Sure"
        android:id="@+id/Article_catalog_Sure"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />

</LinearLayout>