<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"

        android:id="@+id/addBlob_Toolbar">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addBlob_SureButton"
            android:text="@string/addblob_sureButton"
            android:layout_gravity="end"
            />

    </android.support.v7.widget.Toolbar>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:height="80dp"
        android:hint="@string/addblob_ConentHint"
        android:padding="@dimen/article_catalog_margin"
        android:layout_margin="@dimen/article_catalog_margin"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<ImageView
    android:layout_width="@dimen/blob_SelectedImage"

    android:layout_height="@dimen/blob_SelectedImage"
    android:id="@+id/addblob_SelectedImage"
    android:visibility="gone"
    />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_addbigb"
            android:width="@dimen/blob_AddButton"
            android:id="@+id/addblob_addImageButton"

            android:layout_margin="@dimen/article_catalog_size"
            />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/article_catalog_size"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/article_catalog_size"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addblob_weatherName"
                android:layout_marginRight="@dimen/article_catalog_size"
                />

            <ImageView
                android:layout_width="@dimen/blob_wetaher"
                android:layout_height="@dimen/blob_wetaher"
                android:id="@+id/addBlob_weatherImage"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AddBlob_weatherVal"
                android:visibility="gone"
                />


        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/article_catalog_size"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/article_catalog_size"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_location"
        />
    <TextView
        android:layout_marginLeft="@dimen/article_catalog_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addBlob_myLocation"
        android:paddingTop="@dimen/article_catalog_size"
        android:text="我的位置"
        />

</LinearLayout>


    </android.support.v7.widget.CardView>



</LinearLayout>